path değişikliği yapıldı ve button.jsx dosyası eklendi

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": "app/",
     "paths": {
-      "@/*": ["./*"]
+      // "@/*": ["./*"]
+      "@components/*": [
+        "components/*"
+      ]
     }
   }
 }
